[package]
name = "grasswave"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.5.9"
serde = "1.0.140"
serde_derive = "1.0.140"
rocket = "0.5.0-rc.2"
cached = "0.38.0"

[dependencies.rocket_dyn_templates]
version = "0.1.0-rc.2"
features = ["tera"]
